fixed spacing on memories

--- a/src/App.scss
+++ b/src/App.scss
@@ -137,13 +137,18 @@ body {
   text-align: left;
   ul {
     padding-left: 1rem;
+    // padding-top: 0.5rem;
+  }
+  li {
+    padding: 0.25rem;
   }
   h1 {
     text-align: left;
-    margin-bottom: 0.5rem;
+    // margin-bottom: 0.5rem;
   }
   h2 {
     margin-left: -1rem;
+    margin-top: 0.5rem;
   }
 }
 
